# CMakeList.txt: projekt CMake dla elementu TwoWayList, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

project ("TwoWayList")

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (TwoWayList "TwoWayList.cpp" "TwoWayList.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
